--- a/frontend/src/components/App/App.css
+++ b/frontend/src/components/App/App.css
@@ -1,6 +1,10 @@
 .App {
     font-family: Arial, Helvetica, sans-serif;
     color: white;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 20px;
+    margin-top: 80px;
 }
 
 .App-light{
