--- a/frontend/src/components/Faceit/Team/Player/index.css
+++ b/frontend/src/components/Faceit/Team/Player/index.css
@@ -2,17 +2,29 @@
     width: 180px;
     height: 40px;
     /* border: 1px solid red; */
-    border-bottom: solid 2px rgba(90,90,90,0.8);
+    /* border-bottom: solid 2px rgba(90,90,90,0.8); */
     display: flex;
     align-items: center;
     justify-content: flex-start;
     position: relative;
+    margin: 5px 0px;
+    padding: 0px 10px;
+    color: white;
+    text-decoration: none;
+    user-select: none;
+}
+
+.player-container:hover {
+    background:rgba(90,90,90,0.8);
+    border-radius: 16px;
+    cursor: pointer;
 }
 
 .player-avatar {
     width: 30px;
     height: 30px;
     border-radius: 50%;
+    background: #232323;
 }
 
 .player-info {
@@ -26,14 +38,21 @@
 .player-info h2 {
     margin: 0px;
     font-size: 14px;
+    font-weight: 400;
 }
 
 .player-info span {
     margin-top: 5px;
     font-size: 12px;
+    font-weight: 800;
 }
 
 .player-skill-level {
     position: absolute;
     right: 10px;
+}
+
+.level-image {
+    width: 25px;
+    height: 25px;
 }
