--- a/frontend/src/components/Faceit/index.css
+++ b/frontend/src/components/Faceit/index.css
@@ -1,12 +1,12 @@
 .main-container {
-    width: 400px;
-    background: rgba(0,0,0,0.6);
-    border: 2px solid rgba(0,0,0,0.8);
+    width: 450px;
+    background: rgba(0,0,0,0.65);
+    border: 2px solid rgba(248, 168, 168, 0.8);
     border-radius: 12px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 10px;
+    padding: 10px 0px;
     
 }
 
