--- a/frontend/src/components/App/App.css
+++ b/frontend/src/components/App/App.css
@@ -2,9 +2,25 @@
     font-family: Arial, Helvetica, sans-serif;
     color: white;
     display: flex;
-    justify-content: flex-end;
-    margin-right: 20px;
+    justify-content: flex-start;
+    align-items: flex-end;
+    flex-direction: column;
+    margin-right: 6px;
     margin-top: 80px;
+}
+
+.show-faceit-button {
+    background: #171717;
+    width: 40px;
+    height: 45px;
+    border-radius: 4px;
+    padding-right: 5px;
+    opacity: 0.18;
+}
+
+.show-faceit-button:hover {
+    opacity: 1;
+    cursor: pointer;
 }
 
 .App-light{
