--- a/frontend/src/components/Faceit/index.css
+++ b/frontend/src/components/Faceit/index.css
@@ -1,13 +1,14 @@
 .main-container {
     width: 450px;
     background: rgba(0,0,0,0.65);
-    border: 2px solid rgba(248, 168, 168, 0.8);
-    border-radius: 12px;
+    border: 2px solid #171717;
+    border-right: none;
+    border-top-left-radius: 12px;
+    border-bottom-left-radius: 12px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px 0px;
-    
 }
 
 .vs-middle {
