--- a/frontend/src/components/Faceit/index.css
+++ b/frontend/src/components/Faceit/index.css
@@ -1,5 +1,4 @@
 .main-container {
-    width: 450px;
     background: rgba(0,0,0,0.65);
     border: 2px solid #171717;
     border-right: none;
@@ -10,6 +9,9 @@
     align-items: center;
     padding: 10px 0px;
 }
+.match-container {
+    width: 450px;
+}
 
 .vs-middle {
     font-size: 22px;
@@ -18,6 +20,6 @@
 }
 
 .not-in-a-match {
-    width: 100%;
+    width: 360px;
     text-align: center;
 }
