Fixed modal styling

--- a/frontend/src/components/Faceit/index.css
+++ b/frontend/src/components/Faceit/index.css
@@ -11,6 +11,9 @@
 }
 .match-container {
     width: 450px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .vs-middle {
