--- a/frontend/src/components/ConfigPage/Config.css
+++ b/frontend/src/components/ConfigPage/Config.css
@@ -9,3 +9,60 @@
 .Config-dark{
     color:#e5e3e8;
 }
+
+.faceit-preview {
+    width: 100px;
+    background: #232127;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 20px 10px;
+    border: 2px solid #171717;
+    border-radius: 12px;
+    margin-top: 20px;
+}
+
+.faceit-preview h2 {
+    color: white;
+    font-size: 18px;
+    text-align: center;
+}
+
+.faceit-preview button {
+    margin-top: 20px;
+    background: #FF5500;
+    color: white;
+    border: none;
+    border-radius: 2px;
+    height: 20px;
+    width: 80px;
+    cursor: pointer;
+}
+
+.faceit-preview button:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
+.preview-avatar {
+    width: 64px;
+    height: 64px;
+    background: grey;
+}
+
+.preview-level {
+    width: 24px;
+    height: 24px;
+}
+
+.success-set {
+    color: rgb(0, 211, 0);
+    text-align: center;
+}
+
+.success-enabled {
+    color: white;
+    text-align: center;
+    margin-top: 10px;
+}
